update projects with links

--- a/index.html
+++ b/index.html
@@ -194,38 +194,38 @@
       <div class="service">
         <i class="icon fas fa-pager"></i>
         <h4>Build Websites</h4>
-        <p>Complete construction of Websites from the backend to the frontend.</p>
+        <p>Complete construction of Full Stack Web Apps.</p>
       </div>
 
 
       <div class="service">
         <i class="icon fas fa-paint-brush"></i>
-        <h4>Design</h4>
+        <h4>Web Design</h4>
         <p>Website Design and Web layout</p>
       </div>
 
       <div class="service">
         <i class="icon fas fa-keyboard"></i>
         <h4>Website Administration</h4>
-        <p>They accept all types of payment such as paypal and credit cards.</p>
+        <p>Maintenance, Administration and updates of Websites already deployed</p>
       </div>
 
       <div class="service">
         <i class="icon fas fa-credit-card"></i>
         <h4>Software Development</h4>
-        <p>Development of all types of desktop applications with python.</p>
+        <p>Development of all types of Desktop/Websites/Mobile applications.</p>
       </div>
 
       <div class="service">
         <i class="icon fab fa-android"></i>
         <h4>Backend Development</h4>
-        <p>Kirby application development</p>
+        <p>Optimizing functionality and performance of your website by managing servers and databases</p>
       </div>
 
       <div class="service">
         <i class="icon fas fa-database"></i>
         <h4>Manage Databases</h4>
-        <p>Handling data on a smaller scale and making small description graphics.</p>
+        <p>Design, creation and normalization of RDMS such as MySql and PostgreSql.</p>
       </div>
 
     </div>
@@ -275,42 +275,42 @@
         <div class="inner-width">
           <h1 class="section-title">Projects</h1>
           <div class="works">
-            <a href="https://www.google.com/" class="work">
+            <a href="http://renefranco.pythonanywhere.com/" class="work" target="_blank">
               <img src="images/works/KarmaBlog.png" alt="">
               <div class="info">
-                <h3>Virtual assistant</h3>
-                <div class="cat">Kiara: AI from Scratch</div>
+                <h3>Karma Social Media</h3>
+                <div class="cat">Fully functional Web application</div>
               </div>
 
             </a>
 
 
-            <a href="images/works/Post.png" class="work">
-              <img src="images/works/Post.png" alt="">
+            <a href="https://app.revature.com/profile/ReneAdoany/ea809899f73341af33db568fe746f68b" target="_blank" class="work">
+              <img src="images/works/portfolio.png" alt="">
               <div class="info">
-                <h3>Video Surveillance Program</h3>
-                <div class="cat">First Project Using Opencv</div>
+                <h3>Revature Portfolio</h3>
+                <div class="cat">Professional Portfolio of My journey in Revature</div>
               </div>
             </a>
 
-            <a href="images/works/Messages.png" class="work">
-              <img src="images/works/Messages.png" alt="">
+            <a href="https://github.com/reneafranco/SocialMediaBlogAPI" target="_blank" class="work">
+              <img src="images/works/test.png" alt="">
               <div class="info">
-                <h3>DatedMedusa</h3>
-                <div class="cat">Page Using Django About my Routine at the Gym </div>
+                <h3>Social Media Blog API</h3>
+                <div class="cat">Role as Backend Developer </div>
               </div>
             </a>
 
-            <a href="images/works/First.png" class="work">
-              <img src="images/works/First.png" alt="">
+            <a href="https://reneafranco.netlify.app/" target="_blank" class="work">
+              <img src="images/works/previosTest.png" alt="">
               <div class="info">
                 <h3>Portfolio</h3>
                 <div class="cat">My First Portfolio</div>
               </div>
             </a>
 
-            <a href="images/works/data.jpg" class="work">
-              <img src="images/works/data.jpg" alt="">
+            <a href="https://www.hackerrank.com/certificates/fdc5d75cf1af" target="_blank" class="work">
+              <img src="images/works/JavaCertifacte.png" alt="">
               <div class="info">
                 <h3>Data Science</h3>
                 <div class="cat">Pandas, Tensorflow</div>
