update projects with links to a new page on work 6

--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
               </div>
             </a>
 
-            <a href="images/works/6.jpg" class="work">
+            <a href="images/works/6.jpg" target="_blank" class="work">
               <img src="images/works/6.jpg" alt="">
               <div class="info">
                 <h3>Coming Soon..</h3>
