update projects with update Education with location

--- a/index.html
+++ b/index.html
@@ -265,6 +265,7 @@
         <h4>2015 - 2019</h4>
         <h3>Associate Degree | Computer Science. </h3>
         <p>Alberto Sosa.</p>
+        <p>Holguin, Cuba.</p>
       </div>
     </div>
   </div>
