update projects with bot feature

--- a/index.html
+++ b/index.html
@@ -36,7 +36,12 @@
 
 <!-- Home -->
 <section id="home">
-
+  <script src="https://www.gstatic.com/dialogflow-console/fast/messenger/bootstrap.js?v=1"></script>
+  <df-messenger
+          chat-title="Web-Search"
+          agent-id="9f2f1beb-c83b-40ab-90ac-8a47a83993d2"
+          language-code="en"
+  ></df-messenger>
   <div class="inner-width">
     <div class="content">
       <h1></h1>
