update projects with bot feature and icon picture

--- a/index.html
+++ b/index.html
@@ -374,14 +374,14 @@
 
           }
           </script>
-
           <script src="https://www.gstatic.com/dialogflow-console/fast/messenger/bootstrap.js?v=1"></script>
           <df-messenger
                   intent="WELCOME"
-                  chat-title="FAQ"
-                  agent-id="05afe198-0068-4e38-a576-f944ca7a0f07"
-                  language-code="en"
-          ></df-messenger>
+                        chat-icon ="images/bot-icon.png"
+                        chat-title="FAQ"
+                        agent-id="05afe198-0068-4e38-a576-f944ca7a0f07"
+                        language-code="en"
+                      ></df-messenger>
         </div>
       </section>
 
