--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
 
       <div class="block">
         <h4>2015 - 2019</h4>
-        <h3>Associate Degree | Computer Science. </h3>
+        <h3>Associate Degree | Science. </h3>
         <p>Alberto Sosa.</p>
         <p>Holguin, Cuba.</p>
       </div>
