--- a/index.html
+++ b/index.html
@@ -136,13 +136,13 @@
         </div>
         <div class="skill-bar css"></div>
       </div>
-
+      
       <div class="skill">
         <div class="skill-info">
-          <span>BOOTSTRAP</span>
-          <!--            <span>60%</span>-->
+          <span>JAVASCRIPT</span>
+          <span></span>
         </div>
-        <div class="skill-bar js"></div>
+        <div class="skill-bar html"></div>
       </div>
 
       <div class="skill">
