--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
       
       <div class="skill">
         <div class="skill-info">
-          <span>JAVASCRIPT</span>
+          <span>TYPESCRIPT</span>
           <span></span>
         </div>
         <div class="skill-bar html"></div>
