--- a/index.html
+++ b/index.html
@@ -263,10 +263,10 @@
       </div>
 
       <div class="block">
-        <h4>2015 - 2019</h4>
-        <h3>Associate Degree | Science. </h3>
-        <p>Alberto Sosa.</p>
-        <p>Holguin, Cuba.</p>
+        <h4>2024 - PRESENT</h4>
+        <h3>Bachelor of Sciencee | Software Engineering. </h3>
+        <p>Western Governors University.</p>
+        <p>Louisville, KY | USA </p>.</p>
       </div>
     </div>
   </div>
