--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
         <h4>2024 - PRESENT</h4>
         <h3>Bachelor of Sciencee | Software Engineering. </h3>
         <p>Western Governors University.</p>
-        <p>Louisville, KY | USA </p>.</p>
+        <p>Louisville, KY | USA </p>
       </div>
     </div>
   </div>
