--- a/index.html
+++ b/index.html
@@ -182,6 +182,21 @@
           <span></span>
         </div>
         <div class="skill-bar html"></div>
+          <div class="skill">
+        <div class="skill-info">
+          <span>AWS</span>
+          <span></span>
+        </div>
+        <div class="skill-bar html"></div>
+      </div>
+
+      <div class="skill">
+        <div class="skill-info">
+          <span>DOCKER</span>
+          <span></span>
+        </div>
+        <div class="skill-bar html"></div>
+      </div>
       </div>
     </div>
   </div>
