--- a/index.html
+++ b/index.html
@@ -181,6 +181,21 @@
           <span>GIT</span>
           <span></span>
         </div>
+          <div class="skill">
+        <div class="skill-info">
+          <span>LUA</span>
+          <span></span>
+        </div>
+        <div class="skill-bar html"></div>
+      </div>
+
+      <div class="skill">
+        <div class="skill-info">
+          <span>SHELL</span>
+          <span></span>
+        </div>
+        <div class="skill-bar html"></div>
+      </div>
         <div class="skill-bar html"></div>
           <div class="skill">
         <div class="skill-info">
