--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
           <span>GIT</span>
           <span></span>
         </div>
-          
+        <div class="skill-bar html"></div>
       </div>
     </div>
   </div>
