--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
 
       <div class="block">
         <h4>2024 - PRESENT</h4>
-        <h3>Bachelor of Sciencee | Software Engineering. </h3>
+        <h3>Bachelor of Sciencee in Software Engineering. </h3>
         <p>Western Governors University.</p>
         <p>Louisville, KY | USA </p>
       </div>
